<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- *********************************************** -->
    <!-- タイトル -->
    <TextView
        android:id="@+id/TXV_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="洗濯洗剤　価格計算"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTN_Back"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="7dp"

        android:text="メイン画面"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- *********************************************** -->

    <!-- 1回での価格 -->
    <TextView
        android:id="@+id/TXV_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/TextPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TXV_Title" />

    <!-- 1回での価格結果 -->
    <EditText
        android:id="@+id/EDN_Price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/EditTextInit"
        android:gravity="right"
        app:layout_constraintStart_toEndOf="@+id/TXV_Price"
        app:layout_constraintTop_toBottomOf="@id/TXV_Title" />

    <!-- 価格の単位 -->
    <TextView
        android:id="@+id/TXV_PriceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/TextPriceUnit"
        app:layout_constraintStart_toEndOf="@+id/EDN_Price"
        app:layout_constraintTop_toTopOf="@+id/TXV_Price" />

    <CheckBox
        android:id="@+id/CBX_Tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"

        android:checked="true"
        android:text="税込"
        app:layout_constraintStart_toEndOf="@id/TXV_PriceUnit"
        app:layout_constraintTop_toBottomOf="@id/TXV_Title" />

    <!-- *********************************************** -->
    <!-- 容量 -->
    <TextView
        android:id="@+id/TXV_Capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="65dp"
        android:text="@string/TextCapacity"
        app:layout_constraintStart_toStartOf="@+id/TXV_Price"
        app:layout_constraintTop_toTopOf="@+id/TXV_Price" />

    <!-- 容量入力 -->
    <EditText
        android:id="@+id/EDN_Capacity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/EditTextCapacity"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="@+id/EDN_Price"
        app:layout_constraintTop_toBottomOf="@+id/EDN_Price" />

    <!-- 価格の単位 -->
    <TextView
        android:id="@+id/TXV_CapUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:text="@string/TextCapUnit"
        app:layout_constraintStart_toEndOf="@+id/EDN_Capacity"
        app:layout_constraintTop_toTopOf="@+id/TXV_PriceUnit" />

    <!-- *********************************************** -->

    <!-- 使用量 -->
    <TextView
        android:id="@+id/TXV_AmountToUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:text="洗剤の使用量"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TXV_Capacity" />
    <TextView
        android:id="@+id/TXV_AmountToUse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:text="(水30ℓ時)"
        app:layout_constraintStart_toStartOf="@+id/TXV_AmountToUse"
        app:layout_constraintTop_toBottomOf="@+id/TXV_AmountToUse" />

    <!-- 使用量入力 -->
    <EditText
        android:id="@+id/EDN_AmountToUse"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/EditTextCapacity"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="@+id/EDN_Capacity"
        app:layout_constraintTop_toBottomOf="@+id/EDN_Capacity" />

    <!-- 価格の単位 -->
    <TextView
        android:id="@+id/TXV_AmountUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:text="@string/TextAmountUnit"
        app:layout_constraintStart_toEndOf="@+id/EDN_Capacity"
        app:layout_constraintTop_toTopOf="@+id/TXV_CapUnit" />

    <!-- *********************************************** -->

    <Button
        android:id="@+id/BTN_Run"
        android:layout_width="324dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"

        android:text="@string/TextRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EDN_AmountToUse" />

    <!-- *********************************************** -->

    <TextView
        android:id="@+id/TXV_Result00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:text="洗濯1回の使用料"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BTN_Run" />

    <TextView
        android:id="@+id/TXV_Result01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/TextResult"
        app:layout_constraintStart_toStartOf="@+id/EDN_Price"
        app:layout_constraintTop_toTopOf="@id/TXV_Result00" />

    <TextView
        android:id="@+id/TXV_Result02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="円 / 回（税込）"
        app:layout_constraintStart_toStartOf="@+id/TXV_AmountUnit"
        app:layout_constraintTop_toTopOf="@id/TXV_Result01" />

    <!-- *********************************************** -->

    <TextView
        android:id="@+id/TXV_Result20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:text="1か月の使用料"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TXV_Result00" />

    <TextView
        android:id="@+id/TXV_Result21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/TextResult"
        app:layout_constraintStart_toStartOf="@+id/EDN_Price"
        app:layout_constraintTop_toTopOf="@id/TXV_Result20" />

    <TextView
        android:id="@+id/TXV_Result22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="円 / 月（税込）"
        app:layout_constraintStart_toStartOf="@+id/TXV_AmountUnit"
        app:layout_constraintTop_toTopOf="@id/TXV_Result20" />

    <!-- *********************************************** -->


    <TextView
        android:id="@+id/TXV_Result10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="洗濯可能回数"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TXV_Result20" />

    <TextView
        android:id="@+id/TXV_Result10_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:text="(水30L/回)"
        app:layout_constraintStart_toStartOf="@+id/TXV_Result10"
        app:layout_constraintTop_toBottomOf="@id/TXV_Result10" />


    <TextView
        android:id="@+id/TXV_Result11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/TextResult"
        app:layout_constraintStart_toStartOf="@+id/TXV_Result21"
        app:layout_constraintTop_toBottomOf="@id/TXV_Result21" />

    <TextView
        android:id="@+id/TXV_Result12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/TextNumUnit"
        app:layout_constraintStart_toStartOf="@+id/TXV_AmountUnit"
        app:layout_constraintTop_toBottomOf="@id/TXV_Result21" />



</androidx.constraintlayout.widget.ConstraintLayout>